src/espam/parser/expression/ExpressionParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. ExpressionParser.java */
/*******************************************************************\

This file is donated to ESPAM by Compaan Design BV (www.compaandesign.com) 
Copyright (c) 2000 - 2005 Leiden University (LERC group at LIACS)
Copyright (c) 2005 - 2007 CompaanDesign BV, The Netherlands
All rights reserved.

The use and distribution terms for this software are covered by the 
Common Public License 1.0 (http://opensource.org/licenses/cpl1.0.txt)
which can be found in the file LICENSE at the root of this distribution.
By using this software in any fashion, you are agreeing to be bound by 
the terms of this license.

You must not remove this notice, or any other, from this software.

\*******************************************************************/

package espam.parser.expression;

import espam.utils.symbolic.expression.*;

import java.util.ArrayList;
import java.io.InputStream;
import java.util.Iterator;
import java.io.ByteArrayInputStream;

/**
@author Bart Kienhuis 
@version $Id: ExpressionParser.java,v 1.3 2010/08/13 14:29:59 sven Exp $
*/

public class ExpressionParser/*@bgen(jjtree)*/implements ExpressionParserTreeConstants, ExpressionParserConstants {/*@bgen(jjtree)*/
  protected JJTExpressionParserState jjtree = new JJTExpressionParserState();
    public ExpressionParser() {
      this( new ByteArrayInputStream("a hack!!".getBytes()) );
      _byteStream = null;
    }

    ///////////////////////////////////////////////////////////////////
    ////                         public methods                    ////

    public Expression getExpression( String expression )
            throws ParseException {
        Expression linearExpression = null;
        // Make a byte stream from the string
        _byteStream = new ByteArrayInputStream(expression.getBytes());
        // Re initialize the parser
        this.ReInit( _byteStream );
        linearExpression = this.start();
        return linearExpression;
    }

    ///////////////////////////////////////////////////////////////////
    ////                         private variables                 ////

    // Private //
    private ByteArrayInputStream _byteStream;

  final public Expression start() throws ParseException {
                      /*@bgen(jjtree) start */
  ASTstart jjtn000 = new ASTstart(this, JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      complexExpression();
      jj_consume_token(0);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      {if (true) return ((ASTcomplexExpression) jjtn000.jjtGetChild(0)).getExpression();}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public void complexExpression() throws ParseException {
                            /*@bgen(jjtree) complexExpression */
    ASTcomplexExpression jjtn000 = new ASTcomplexExpression(this, JJTCOMPLEXEXPRESSION);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);int signValue;
    int numberOfChildern;
    SimpleNode node;
    String nodeName;
    LinTerm trm;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADD:
      case SUB:
        sign();
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
      }
      termOrOperator();
      label_1:
      while (true) {
        if (jj_2_1(2)) {
          ;
        } else {
          break label_1;
        }
        linearOperator();
        termOrOperator();
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
            numberOfChildern = jjtn000.jjtGetNumChildren();
            signValue = 1;
            ArrayList termList = new ArrayList();
            for (int i=0;i<numberOfChildern;i++) {
                node = (SimpleNode) jjtn000.jjtGetChild(i);
                nodeName = node.toString();
                // System.out.println(" -- Node: " + nodeName);
                if (nodeName == "sign" ) {
                    signValue = ((ASTsign) node).getValue();
                }
                if (nodeName == "linearOperator" ) {
                    signValue = ((ASTlinearOperator) node).getValue();
                }
                if (nodeName == "termOrOperator" ) {
                    trm = ((ASTtermOrOperator) node).getTerm();
                    trm.setSign( signValue );
                    termList.add( trm );
                }
            }
            jjtn000.setExpression(new Expression(termList));
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void simpleExpression() throws ParseException {
                          /*@bgen(jjtree) simpleExpression */
    ASTsimpleExpression jjtn000 = new ASTsimpleExpression(this, JJTSIMPLEEXPRESSION);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);int signValue;
    int numberOfChildern;
    SimpleNode node;
    String nodeName;
    LinTerm trm;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADD:
      case SUB:
        sign();
        break;
      default:
        jj_la1[1] = jj_gen;
        ;
      }
      term();
      label_2:
      while (true) {
        if (jj_2_2(2)) {
          ;
        } else {
          break label_2;
        }
        linearOperator();
        term();
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
            numberOfChildern = jjtn000.jjtGetNumChildren();
            signValue = 1;
            ArrayList termList = new ArrayList();
            for (int i=0;i<numberOfChildern;i++) {
                node = (SimpleNode) jjtn000.jjtGetChild(i);
                nodeName = node.toString();
                if (nodeName == "sign" ) {
                    signValue = ((ASTsign) node).getValue();
                }
                if (nodeName == "linearOperator" ) {
                    signValue = ((ASTlinearOperator) node).getValue();
                }
                if (nodeName == "term" ) {
                    trm = ((ASTterm) node).getTerm();
                    trm.setSign( signValue );
                    termList.add( trm );
                }
            }
            jjtn000.setLinearExp( termList );
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void sign() throws ParseException {
               /*@bgen(jjtree) sign */
  ASTsign jjtn000 = new ASTsign(this, JJTSIGN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADD:
        jj_consume_token(ADD);
                 jjtree.closeNodeScope(jjtn000, true);
                 jjtc000 = false;
                 jjtn000.setValue(  1 );
        break;
      case SUB:
        jj_consume_token(SUB);
                 jjtree.closeNodeScope(jjtn000, true);
                 jjtc000 = false;
                 jjtn000.setValue( -1 );
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
        if (jjtc000) {
          jjtree.closeNodeScope(jjtn000, true);
        }
    }
  }

  final public void linearOperator() throws ParseException {
                         /*@bgen(jjtree) linearOperator */
  ASTlinearOperator jjtn000 = new ASTlinearOperator(this, JJTLINEAROPERATOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADD:
        jj_consume_token(ADD);
                 jjtree.closeNodeScope(jjtn000, true);
                 jjtc000 = false;
                 jjtn000.setValue(  1 );
        break;
      case SUB:
        jj_consume_token(SUB);
                 jjtree.closeNodeScope(jjtn000, true);
                 jjtc000 = false;
                 jjtn000.setValue( -1 );
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
        if (jjtc000) {
          jjtree.closeNodeScope(jjtn000, true);
        }
    }
  }

  final public void termOrOperator() throws ParseException {
                         /*@bgen(jjtree) termOrOperator */
  ASTtermOrOperator jjtn000 = new ASTtermOrOperator(this, JJTTERMOROPERATOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_3(3)) {
        specialTerm();
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
            jjtn000.setTerm( ((ASTspecialTerm) jjtn000.jjtGetChild(0)).getTerm() );
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INTEGER_LITERAL:
        case IDENTIFIER:
          term();
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
            jjtn000.setTerm( ((ASTterm) jjtn000.jjtGetChild(0)).getTerm() );
          break;
        default:
          jj_la1[4] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
       if (jjtc000) {
         jjtree.clearNodeScope(jjtn000);
         jjtc000 = false;
       } else {
         jjtree.popNode();
       }
       if (jjte000 instanceof RuntimeException) {
         {if (true) throw (RuntimeException)jjte000;}
       }
       if (jjte000 instanceof ParseException) {
         {if (true) throw (ParseException)jjte000;}
       }
       {if (true) throw (Error)jjte000;}
    } finally {
       if (jjtc000) {
         jjtree.closeNodeScope(jjtn000, true);
       }
    }
  }

  final public void specialTerm() throws ParseException {
                      /*@bgen(jjtree) specialTerm */
    ASTspecialTerm jjtn000 = new ASTspecialTerm(this, JJTSPECIALTERM);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);int num, den;
    LinTerm term;
    int numberOfChildren;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
        fraction();
        jj_consume_token(MUL);
        specialOperator();
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
            numberOfChildren = jjtn000.jjtGetNumChildren();
            num = ((ASTfraction) jjtn000.jjtGetChild(0)).getNumerator();
            den = ((ASTfraction) jjtn000.jjtGetChild(0)).getDenominator();
            term = ((ASTspecialOperator) jjtn000.jjtGetChild(1)).getTerm();
            term.setNumerator( num );
            term.setDenominator( den );

            jjtn000.setTerm( term );
        break;
      case DIV:
      case MOD:
      case FLOOR:
      case CEIL:
      case MIN:
      case MAX:
        specialOperator();
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
            term = ((ASTspecialOperator) jjtn000.jjtGetChild(0)).getTerm();
            jjtn000.setTerm( term );
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void specialOperator() throws ParseException {
                          /*@bgen(jjtree) specialOperator */
    ASTspecialOperator jjtn000 = new ASTspecialOperator(this, JJTSPECIALOPERATOR);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);LinTerm term = null;
    Expression exp = null;
    Expression exp1 = null;
    Expression exp2 = null;
    int div;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DIV:
        jj_consume_token(DIV);
        jj_consume_token(49);
        simpleExpression();
        jj_consume_token(50);
        Integer();
        jj_consume_token(51);
            jjtree.closeNodeScope(jjtn000, true);
            jjtc000 = false;
              exp = ((ASTsimpleExpression)
                      jjtn000.jjtGetChild(0)).getLinearExp();
              div = ((ASTInteger) jjtn000.jjtGetChild(1)).getValue();
              term = new DivTerm(exp,div);
              jjtn000.setTerm( term );
        break;
      case MOD:
        jj_consume_token(MOD);
        jj_consume_token(49);
        simpleExpression();
        jj_consume_token(50);
        Integer();
        jj_consume_token(51);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
            exp = ((ASTsimpleExpression)
                    jjtn000.jjtGetChild(0)).getLinearExp();
            div = ((ASTInteger) jjtn000.jjtGetChild(1)).getValue();
            term = new ModTerm(exp,div);
            jjtn000.setTerm( term );
        break;
      case FLOOR:
        jj_consume_token(FLOOR);
        jj_consume_token(49);
        simpleExpression();
        jj_consume_token(51);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
              exp = ((ASTsimpleExpression)
                      jjtn000.jjtGetChild(0)).getLinearExp();
              term = new FloorTerm(exp);
              jjtn000.setTerm( term );
        break;
      case CEIL:
        jj_consume_token(CEIL);
        jj_consume_token(49);
        simpleExpression();
        jj_consume_token(51);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
              exp = ((ASTsimpleExpression)
                      jjtn000.jjtGetChild(0)).getLinearExp();
              term = new CeilTerm(exp);
              jjtn000.setTerm( term );
        break;
      case MAX:
        jj_consume_token(MAX);
        jj_consume_token(49);
        simpleExpression();
        jj_consume_token(50);
        simpleExpression();
        jj_consume_token(51);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
              exp1 = ((ASTsimpleExpression)
                      jjtn000.jjtGetChild(0)).getLinearExp();
              exp2 = ((ASTsimpleExpression)
                      jjtn000.jjtGetChild(1)).getLinearExp();
              term = new MaximumTerm(exp1, exp2);
              jjtn000.setTerm( term );
        break;
      case MIN:
        jj_consume_token(MIN);
        jj_consume_token(49);
        simpleExpression();
        jj_consume_token(50);
        simpleExpression();
        jj_consume_token(51);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
              exp1 = ((ASTsimpleExpression)
                      jjtn000.jjtGetChild(0)).getLinearExp();
              exp2 = ((ASTsimpleExpression)
                      jjtn000.jjtGetChild(1)).getLinearExp();
              term = new MinimumTerm(exp1, exp2);
              jjtn000.setTerm( term );
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
        if (jjtc000) {
          jjtree.clearNodeScope(jjtn000);
          jjtc000 = false;
        } else {
          jjtree.popNode();
        }
        if (jjte000 instanceof RuntimeException) {
          {if (true) throw (RuntimeException)jjte000;}
        }
        if (jjte000 instanceof ParseException) {
          {if (true) throw (ParseException)jjte000;}
        }
        {if (true) throw (Error)jjte000;}
    } finally {
        if (jjtc000) {
          jjtree.closeNodeScope(jjtn000, true);
        }
    }
  }

  final public void term() throws ParseException {
               /*@bgen(jjtree) term */
    ASTterm jjtn000 = new ASTterm(this, JJTTERM);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);int num, den;
    String name;
    int numberOfChildern;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
        fraction();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MUL:
          jj_consume_token(MUL);
          Identifier();
          break;
        default:
          jj_la1[7] = jj_gen;
          ;
        }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
            numberOfChildern = jjtn000.jjtGetNumChildren();
            num = ((ASTfraction) jjtn000.jjtGetChild(0)).getNumerator();
            den = ((ASTfraction) jjtn000.jjtGetChild(0)).getDenominator();
            name = "";
            if ( numberOfChildern == 2 ) {
                name = ((ASTIdentifier) jjtn000.jjtGetChild(1)).getName();
            }
            jjtn000.setTerm( new LinTerm(num,den,name) );
        break;
      case IDENTIFIER:
        Identifier();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MUL:
          jj_consume_token(MUL);
          fraction();
          break;
        default:
          jj_la1[8] = jj_gen;
          ;
        }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
            numberOfChildern = jjtn000.jjtGetNumChildren();
            name = ((ASTIdentifier) jjtn000.jjtGetChild(0)).getName();
            num = 1;
            den = 1;
            if ( numberOfChildern == 2 ) {
                num = ((ASTfraction) jjtn000.jjtGetChild(1)).getNumerator();
                den = ((ASTfraction) jjtn000.jjtGetChild(1)).getDenominator();
            }
            jjtn000.setTerm( new LinTerm(num,den,name));
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void fraction() throws ParseException {
                   /*@bgen(jjtree) fraction */
    ASTfraction jjtn000 = new ASTfraction(this, JJTFRACTION);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);int num;
    int den;
    try {
      Integer();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FRACTION:
        jj_consume_token(FRACTION);
        Integer();
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
            int numberOfChildern = jjtn000.jjtGetNumChildren();
            if ( numberOfChildern == 1 ) {
                num = ((ASTInteger) jjtn000.jjtGetChild(0)).getValue();
                den = 1;
            } else {
                num = ((ASTInteger) jjtn000.jjtGetChild(0)).getValue();
                den = ((ASTInteger) jjtn000.jjtGetChild(1)).getValue();
            }
            jjtn000.setFraction(num,den);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void Identifier() throws ParseException {
                     /*@bgen(jjtree) Identifier */
    ASTIdentifier jjtn000 = new ASTIdentifier(this, JJTIDENTIFIER);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(IDENTIFIER);
                        jjtree.closeNodeScope(jjtn000, true);
                        jjtc000 = false;
                        jjtn000.setName( t.toString() );
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }
